--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -504,7 +504,7 @@
     text-align: center;
 }
 
-.our_cuauses h2. {
+.our_cuauses h2 {
     color: #3c354e;
     font-family: "Roboto", sans-serif;
     font-size: 32px;
